Added missing files

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /CodeLouisvilleConsole/.vs/CodeLouisvilleConsole/v15/Server/sqlite3/db.lock
+/CodeLouisvilleConsole/.vs/CodeLouisvilleConsole/v15/.suo
+/~WRL1668.tmp
+/~$deLouisvilleConsole-Demo Steps.docx
